--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <style>
       body {
-      background-image: url(file:///C:/Users/R41N13R0/Downloads/La%20Caixa/Imagen%20ODS_3.png);
+      background-image: url(https://raw.githubusercontent.com/N35Q/the-challenge-la-caixa/refs/heads/main/Imagen%20ODS_3.png);
       background-repeat: repeat;
       background-size: 20%;
       height: 1000 px;
