--- a/index.html
+++ b/index.html
@@ -15,20 +15,38 @@
       background-image: url(https://raw.githubusercontent.com/N35Q/the-challenge-la-caixa/refs/heads/main/Imagen%20ODS_3.png);
       background-repeat: repeat;
       background-size: 20%;
-      height: 1000 px;
       }
 
       .titleone {
       font-family: 'Bangers';
-      font-size: 50px;
+      font-size: 80px;
       text-align: center;
       color: black;
+      border-right: 3px solid black; /* Cursor de escritura */
       }
     </style>
 
   <body>
 
-    <p class="titleone">Hola, este es nuestra propuesta de proyecto para The Challenge:</p>
+    <p class="titleone"></p>
+    
+    <script>
+        const texto = "Hola, este es nuestra propuesta de proyecto para The Challenge:";
+        let i = 0;
+        const velocidad = 75;
 
+        function escribirTexto() {
+            if (i < texto.length) {
+                document.querySelector(".titleone").innerHTML += texto.charAt(i);
+                i++;
+                setTimeout(escribirTexto, velocidad);
+            } else {
+                document.querySelector(".titleone").style.borderRight = "none"; // Quita el cursor al final
+            }
+        }
+
+        escribirTexto();
+    </script>
+    
   </body>
 </html>
