--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       display: inline-grid;
       align-content: center;
       text-align: center;
+      height: 200px;
       width: 60%;
+      border-radius: 15px;
+      padding: 15px;
+      background-color: rgba(200, 200, 200, 0.75);
       }
 
       .titleone {
@@ -46,18 +50,16 @@
   <body>
 
     <div class="encabezado1">
-      <div style="width: 20%;">
-      </div>
-
+      <div style="width: 20%;"></div>
       <div class="encabezado2">
         <p class="titleone"><span class="titleoneone"></span></p>
       </div>
     </div>
 
     <script>
-        const texto = "Hola, este es nuestra propuesta de proyecto para The Challenge:";
+        const texto = "Hola, esta es nuestra propuesta de proyecto para The Challenge:";
         let i = 0;
-        const velocidad = 75;
+        const velocidad = 80;
 
         function escribirTexto() {
             if (i < texto.length) {
