--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       text-align: center;
       height: 200px;
       width: 60%;
+      margin-top: 30px;
+      margin-bottom: 25px;
       border-radius: 15px;
       padding: 15px;
       background-color: rgba(200, 200, 200, 0.75);
@@ -76,3 +78,4 @@
 
   </body>
 </html>
+
