--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       margin-bottom: 25px;
       border-radius: 15px;
       padding: 15px;
-      background-color: rgba(200, 200, 200, 0.75);
+      background-color: rgb(200,156,164);
       }
 
       .titleone {
@@ -59,7 +59,7 @@
     </div>
 
     <script>
-        const texto = "Hola, esta es nuestra propuesta de proyecto para The Challenge:";
+        const texto = "Hola! Esta es nuestra propuesta de proyecto para The Challenge:";
         let i = 0;
         const velocidad = 80;
 
