--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
     <title>The Challenge - La Ciaxa - Rainiero, Gonzalo y José</title>
 
+    <meta name="google-site-verification" content="rELLrlU3w8sklwm1JmM_mFHnn2viADnnKxexgZQlLEI" />
+    
     <link rel="icon" type="image/x-icon" href="">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
